--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.0.0",
     "@types/echarts": "^4.4.2",
     "echarts": "^4.6.0",
+    "ngx-echarts": "^4.2.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
